assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Yatra One:100,200,300,400,500,600,700|Kalam:100,200,300,400,500,600,700');

* {
    margin: 0;
    padding: 0;
    border: 0;
}

.main-body {
    margin: 0 70px;
}

/*------------------------------ Navigation Section*/
nav {
    background-color: #f4a460;
    position: relative;
}

.navbar a {
    color: #000000;
}

.navbar-brand {
    padding-right: 600px;
}

.navbar-main a {
    text-align: right;
    margin-left: 50px;
    padding-left: 100px;
    text-decoration: none;
}

.nav-link {
	font-size: 20px;
}

/*------------------------------ Carousel Section*/

#myCarousel img {
    height: 95vh;
    width: 100%;
}

.carousel-caption {
    font-family: "Yatra One", sans-serif;
    background-color: rgb(0, 1, 1, 0.4);
}

/*------------------------------ Description*/
.description {
    font-family: "Yatra One", sans-serif;
    text-align: center;
    margin: 40px 0px;
}

.description p {
    font-family: "Kalam", sans-serif;
    margin: 40px 80px 80px;
    font-size: 20px;
    font-weight: 400;
}

/*------------------------------ Card Flip*/
.card-img {
    width: 350px;
    height: 450px;
}

.flip-card {
    margin: 0 auto;
    margin-bottom: 60px;
    width: 350px;
    height: 450px;
}

/* This container is needed to position the front and back side */
.flip-card-in {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.7s;
    transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-in {
    transform: rotateY(180deg);
}

.flip-front,
.flip-back {
    position: absolute;
    width: 100%;
    height: 100%;
}

/* The display for the back of the card */
.flip-back {
    font-family: "Yatra One", sans-serif;
    padding: 15px;
    width: 100%;
    height: 100%;
    background-color: #f8c8a0;
    color: #000000;
    transform: rotateY(180deg);
}

/*  */
.flip-back p {
    margin-top: 30px;
    font-family: "kalam", sans-serif;
}

.btn-card {
    padding: 0 5px;
    position: absolute;
    color: black;
    right: 125px;
    bottom: 15px;
}

.btn-card a {
    color: #000000;
}

/*-----------------------------Contact Me Modal*/
.contact-title {
    font-family: "Yatra One", sans-serif;
    text-align: center;
}

.contact-headers {
    margin: 30px 30px;
    font-family: "Kalam", sans-serif;
    text-align: center;
}

.center-form {
    margin: 0 50px;
    width: 100%;
}

.form-control {
	margin-bottom: 20px;
}

.contact-body {
    padding-bottom: 20px;
}

/*-----------------------------Country Section*/
.country-title {
    text-align: center;
    font-size: 30px;
}

.country-description {
    text-align: center;
}

.top-rated-container {
    margin: 10px 70px;
    padding: 10px;
}

#top-places,
#top-food {
    text-align: center;
    letter-spacing: 3px;
    text-transform: uppercase;
    margin-bottom: 25px;
}

.top-rated-place,
.top-rated-food {
    margin: 10px 0px;
}

.top-rated-places,
.top-rated-foods {
    margin-bottom: 20px;
}

.place-image,
.food-image {
    object-fit: cover;
    height: 150px;
}

.more-link {
    padding: 5px;
    border-radius: 5px;
    border-style: solid;
}

.more-link:hover {
    background-color: blue;
}

/*-----------------------------Footer Section*/
.footer-section {
    text-align: center;
    min-height: 150px;
    background-color: #f4a460;
    padding-top: 15px;
}

.footer-section a {
    font-family: "kalam", sans-serif;
    text-decoration: none;
    color: #000000;
}

.footer-section a:hover {
    transform: scale(1.1);
    color: #000000;
    text-shadow: 1px 1px 1px #676767;
}

.quicklinks h4,
.social-media h4,
.contact-us h4 {
    font-family: "Yatra One", sans-serif;
}

.quicklinks p,
.social-media p,
.contact-us p {
    font-family: "kalam", sans-serif;
}

.social-logos {
    font-size: 40px;
    text-align: center;
}

@media only screen and (max-width: 1024px) {

    .navbar-brand {
        padding-right: 325px;
    }

    .card-img {
        width: 250px;
        height: 350px;
    }

    .flip-card {
        width: 250px;
        height: 350px;
    }

    .contact-title {
        font-family: "Yatra One", sans-serif;
        text-align: center;
        font-size: 30px;
    }

    .contact-heading {
        font-size: 20px;
    }
}

@media only screen and (max-width: 768px) {

    .navbar-brand {
        padding-right: 80px;
    }

    #myCarousel img {
        height: 80vh;
        width: 100%;
    }

    .last-card {
        display: none;
    }
}

@media only screen and (max-width: 425px) {
    #myCarousel img {
        height: 50vh;
        width: 100%;
    }

    .homepage-title {
        font-size: 30px;
    }

    .description p {
        margin: 0;
    }

    .main-body {
        margin: 0;
    }

    .card-img {
        width: 300px;
        height: 400px;
    }

    .flip-card {
        width: 300px;
        height: 400px;
    }

    .last-card {
        display: initial;
    }

    .social-media h4,
    .contact-us h4 {
        margin-top: 40px;
    }
}

@media only screen and (max-width: 375px) {
    .navbar-brand{
        margin: 0;
        padding: 0;
    }

    #myCarousel img {
        height: 40vh;
        width: 100%;
    }

    .homepage-title {
        font-size: 25px;
    }

    .description p {
        font-size: 18px;
    }
}

@media only screen and (max-width: 320px) {
    .card-img {
        width: 250px;
        height: 350px;
    }

    .flip-card {
        width: 250px;
        height: 350px;
    }
}

